--- a/app/views/challenges/show.html.haml
+++ b/app/views/challenges/show.html.haml
@@ -1,4 +1,8 @@
-.container.pt-4
+.container
+	.position-relative.w-100.bg-dark.text-light{style: "padding-top: 37.5%"}
+		.position-absolute.top-0.start-0.bottom-0.end-0
+			.row.h-100
+				%img{src: "https://storage.googleapis.com/dbsan-public/Banner4Challenge.png", alt: "Banner Image of people exercising", width: "100%", style: "height: 100%"}
 	%h1 #{@challenge.title}
 
 	.row.mt-4.border.border-dark
@@ -11,11 +15,10 @@
 			%strong End Date and Time
 		.col-6.p-2
 			= local_time(@challenge.end)
-	- unless current_user&.id.in?(@users)
-		.mt-4
+	.mt-4
+		- unless current_user&.id.in?(@users)
 			= link_to "Register Now", new_challenge_participant_path(@challenge), class: "btn btn-lg btn-dark", role: "button"
-	- if current_user&.admin?
-		.mt-4
+		- if current_user&.admin?
 			= link_to "Edit", edit_challenge_path(@challenge), class: "btn btn-lg btn-dark", role: "button"
 	
 	.mt-4
