--- a/app/views/layouts/navs/_topnav.html.haml
+++ b/app/views/layouts/navs/_topnav.html.haml
@@ -17,6 +17,8 @@
 						%li.nav-item.mb-0
 							= link_to "Camps", camps_path(view: "all"), class: "nav-link text-dark"
 						%li.nav-item.mb-0
+							= link_to "Challenges", challenges_path(view: "all"), class: "nav-link text-dark"
+						%li.nav-item.mb-0
 							= link_to "About", about_path, class: "nav-link text-dark"
 						%li.nav-item.mb-0
 							= link_to "Contact", contact_path, class: "nav-link text-dark"
@@ -47,6 +49,8 @@
 					-#= link_to "Videos", root_path, class: "nav-link text-light"
 				%li.nav-item.mb-0
 					= link_to "Camps", camps_path(view: "all"), class: "nav-link text-light"
+				%li.nav-item.mb-0
+					= link_to "Challenges", challenges_path(view: "all"), class: "nav-link text-light"
 				%li.nav-item.mb-0
 					= link_to "About", about_path, class: "nav-link text-light"
 				%li.nav-item.mb-0
