--- a/app/views/challenges/index.html.haml
+++ b/app/views/challenges/index.html.haml
@@ -6,13 +6,13 @@
 	.row
 		- @challenges.each do |c|
 			.col-6.col-md-4
-				.card.border.border-dark
+				.card
 					.card-img-top.position-relative.w-100.bg-dark.text-light{style: "padding-top: 56.25%"}
 						.position-absolute.top-0.start-0.bottom-0.end-0.border.border-dark
 							.row.h-100
 								%img{src: "https://storage.googleapis.com/dbsan-public/Banner4Challenge.png", alt: "Banner Image of people exercising", width: "100%", style: "height: 100%"}
 					.card-body
-						%a.stretched-link.card-title{href: challenge_path(c)} #{c.title}
+						%a.h2.stretched-link.card-title.text-dark.text-decoration-none{href: challenge_path(c)} #{c.title}
 						.text-muted Starts: #{local_time(c.start)}
 						.text-muted Ends: #{local_time(c.end)}
 						
