--- a/app/views/challenge_participants/new.html.haml
+++ b/app/views/challenge_participants/new.html.haml
@@ -10,7 +10,7 @@
 					= f.label :first_name, "First Name"
 			.col-6
 				.form-floating.mb-4
-					= f.text_field :last_name, placeholder: "Last Name", value: @first_name, class: "form-control border border-dark"
+					= f.text_field :last_name, placeholder: "Last Name", value: @last_name, class: "form-control border border-dark"
 					= f.label :last_name, "Last Name"
 		.form-floating.mb-4
 			= f.text_field :line_1, placeholder: "Address Line 1", value: @line_1, class: "form-control border border-dark"
@@ -35,7 +35,7 @@
 			= f.text_field :country, placeholder: "Country", value: @country, class: "form-control border border-dark"
 			= f.label :country, "Country"
 
-		%fieldset.fieldset.border.border-dark.p-2
+		.fieldset.border.border-dark.p-2
 			%legend T-shirt size
 			.row.mb-2
 				.col-4.col-md-2.d-grid.d-block.mb-2
