--- a/app/views/challenges/show.html.haml
+++ b/app/views/challenges/show.html.haml
@@ -5,23 +5,51 @@
 				%img{src: "https://storage.googleapis.com/dbsan-public/Banner4Challenge.png", alt: "Banner Image of people exercising", width: "100%", style: "height: 100%"}
 	%h1 #{@challenge.title}
 
-	.row.mt-4.border.border-dark
-		.col-6.p-2
-			%strong Start Date and Time
-		.col-6.p-2
-			= local_time(@challenge.start)
-	.row.border.border-dark
-		.col-6.p-2
-			%strong End Date and Time
-		.col-6.p-2
-			= local_time(@challenge.end)
-	.mt-4
-		- unless current_user&.id.in?(@users)
-			= link_to "Register Now", new_challenge_participant_path(@challenge), class: "btn btn-lg btn-dark", role: "button"
-		- else
-			= link_to "View My Participant Page", challenge_participant_path(@challenge, @participant.id), class: "btn btn-lg btn-dark", role: "button"
-		- if current_user&.admin?
-			= link_to "Edit", edit_challenge_path(@challenge), class: "btn btn-lg btn-dark", role: "button"
-	
-	.mt-4
+	.row
+		.col-md-8
+			.row.mt-4.border.border-dark
+				.col-6.p-2
+					%strong Start Date and Time
+				.col-6.p-2
+					= local_time(@challenge.start)
+			.row.border.border-dark
+				.col-6.p-2
+					%strong End Date and Time
+				.col-6.p-2
+					= local_time(@challenge.end)
+		.col-md-4.text-end
+			.mt-4
+				- unless current_user&.id.in?(@users)
+					= link_to "Register Now", new_challenge_participant_path(@challenge), class: "btn btn-lg btn-dark", role: "button"
+				- else
+					= link_to "View My Participant Page", challenge_participant_path(@challenge, @participant.id), class: "btn btn-lg btn-dark", role: "button"
+				- if current_user&.admin?
+					= link_to "Edit", edit_challenge_path(@challenge), class: "btn btn-lg btn-dark", role: "button"	
+	.row.mb-4.mt-4
+		.col-6.col-md-3.mx-auto
+			.card
+				.card-body.position-relative.w-100{style: "padding-top: 100%"}
+					.position-absolute.top-0.start-0.bottom-0.end-0.p-4{style: "border: 0.5rem solid black; border-radius: 50%"} 
+						.row.h-100
+							.align-self-center.text-center
+								.display-4.fw-bolder #{@participants.count}
+								.display-6.fw-bolder Participants		
+		.col-6.col-md-3.mx-auto
+			.card
+				.card-body.position-relative.w-100{style: "padding-top: 100%"}
+					.position-absolute.top-0.start-0.bottom-0.end-0.p-4{style: "border: 0.5rem solid black; border-radius: 50%"} 
+						.row.h-100
+							.align-self-center.text-center
+								.display-4.fw-bolder #{@donor_count}
+								.display-6.fw-bolder Donors				
+		.col-6.col-md-3.mx-auto
+			.card
+				.card-body.position-relative.w-100{style: "padding-top: 100%"}
+					.position-absolute.top-0.start-0.bottom-0.end-0.p-4{style: "border: 0.5rem solid black; border-radius: 50%"} 
+						.row.h-100
+							.align-self-center.text-center
+								.display-4.fw-bolder #{number_to_currency(@raised, precision: 0)}
+								.display-6.fw-bolder Raised				
+	.col-lg-8.mt-4.mx-auto
+		%h2 Description
 		= simple_format(@challenge.description)
