updated tax id and challenges update action

--- a/app/views/donation_mailer/tax_deductible.html.haml
+++ b/app/views/donation_mailer/tax_deductible.html.haml
@@ -7,7 +7,7 @@
 	%br
 	%strong DeafBlind Support and Access Network
 	%br
-	%strong Tax ID: [insert]
+	%strong Tax ID: 87-2941292
 
 %p
 	%strong Donor’s Name:
