updated with new circle and added participant URL

--- a/app/views/challenges/show.html.haml
+++ b/app/views/challenges/show.html.haml
@@ -40,6 +40,14 @@
 					.position-absolute.top-0.start-0.bottom-0.end-0.p-4{style: "border: 0.5rem solid black; border-radius: 50%"} 
 						.row.h-100
 							.align-self-center.text-center
+								.display-4.fw-bolder 0
+								.display-6.fw-bolder Minutes		
+		.col-6.col-md-3.mx-auto
+			.card
+				.card-body.position-relative.w-100{style: "padding-top: 100%"}
+					.position-absolute.top-0.start-0.bottom-0.end-0.p-4{style: "border: 0.5rem solid black; border-radius: 50%"} 
+						.row.h-100
+							.align-self-center.text-center
 								.display-4.fw-bolder #{@donor_count}
 								.display-6.fw-bolder Donors				
 		.col-6.col-md-3.mx-auto
