--- a/app/views/challenge_participants/show.html.haml
+++ b/app/views/challenge_participants/show.html.haml
@@ -5,9 +5,13 @@
 				%i.h1.bi.bi-arrow-left-circle{aria:{hidden: "true"}}
 		.flex-grow-1.p-2
 			%h1 #{@challenge.title}
-	.d-flex
-		.flex.p-2.fw-bolder Participant: 
-		.flex-grow-1.p-2{aria:{flowto: "rightSide"}} #{@participant.full_name}
+	.row
+		.col-6.col-md-2.fw-bolder Participant: 
+		.col-6.col-md-10.p-2{aria:{flowto: "rightSide"}} #{@participant.full_name}
+
+	.row
+		.col-6.col-md-2.fw-bolder Page URL:
+		.col-12.col-md-10 #{challenge_participant_url(@challenge, @participant)}
 
 	.row
 		#leftSide.col-lg-8.order-2.order-lg-1
