--- a/app/views/challenges/show.html.haml
+++ b/app/views/challenges/show.html.haml
@@ -29,7 +29,7 @@
 		.col-6.col-md-3.mx-auto
 			.card
 				.card-body.position-relative.w-100{style: "padding-top: 100%"}
-					.position-absolute.top-0.start-0.bottom-0.end-0.p-4{style: "border: 0.5rem solid black; border-radius: 50%"} 
+					.position-absolute.top-0.start-0.bottom-0.end-0.p-4.border-dark{style: "border: 0.5rem solid; border-radius: 50%"} 
 						.row.h-100
 							.align-self-center.text-center
 								.display-4.fw-bolder #{@participants.count}
@@ -37,7 +37,7 @@
 		.col-6.col-md-3.mx-auto
 			.card
 				.card-body.position-relative.w-100{style: "padding-top: 100%"}
-					.position-absolute.top-0.start-0.bottom-0.end-0.p-4{style: "border: 0.5rem solid black; border-radius: 50%"} 
+					.position-absolute.top-0.start-0.bottom-0.end-0.p-4.border-dark{style: "border: 0.5rem solid; border-radius: 50%"}
 						.row.h-100
 							.align-self-center.text-center
 								.display-4.fw-bolder 0
@@ -45,7 +45,7 @@
 		.col-6.col-md-3.mx-auto
 			.card
 				.card-body.position-relative.w-100{style: "padding-top: 100%"}
-					.position-absolute.top-0.start-0.bottom-0.end-0.p-4{style: "border: 0.5rem solid black; border-radius: 50%"} 
+					.position-absolute.top-0.start-0.bottom-0.end-0.p-4.border-dark{style: "border: 0.5rem solid; border-radius: 50%"}
 						.row.h-100
 							.align-self-center.text-center
 								.display-4.fw-bolder #{@donor_count}
@@ -53,7 +53,7 @@
 		.col-6.col-md-3.mx-auto
 			.card
 				.card-body.position-relative.w-100{style: "padding-top: 100%"}
-					.position-absolute.top-0.start-0.bottom-0.end-0.p-4{style: "border: 0.5rem solid black; border-radius: 50%"} 
+					.position-absolute.top-0.start-0.bottom-0.end-0.p-4.border-dark{style: "border: 0.5rem solid; border-radius: 50%"}
 						.row.h-100
 							.align-self-center.text-center
 								.display-4.fw-bolder #{number_to_currency(@raised, precision: 0)}
