--- a/app/views/users/registrations/new.html.haml
+++ b/app/views/users/registrations/new.html.haml
@@ -51,6 +51,6 @@
             = f.label :password_confirmation, "Confirm Password"
         
       .row
-        = button_tag(class: "btn btn-primary btn-lg") do 
+        = button_tag(class: "btn btn-dark btn-lg") do 
           %i.bi.bi-door-open
           %span Create Account
