--- a/app/views/challenge_participants/index.html.haml
+++ b/app/views/challenge_participants/index.html.haml
@@ -4,4 +4,4 @@
 	- @participants.each do |p|
 		.card.border.border-dark
 			.card-body
-				%h2.card-title #{p.full_name}
+				%h2.card-title #{p.last_name}, #{p.first_name}
