--- a/app/views/challenge_participants/index.html.haml
+++ b/app/views/challenge_participants/index.html.haml
@@ -5,3 +5,4 @@
 		.card.border.border-dark
 			.card-body
 				%h2.card-title #{p.last_name}, #{p.first_name}
+				= link_to "View", challenge_participant_path(@challenge, p)
