--- a/app/views/challenge_participants/show.html.haml
+++ b/app/views/challenge_participants/show.html.haml
@@ -10,10 +10,6 @@
 			%strong Participant: 
 		.col-6.col-lg-10.p-2 #{@participant.full_name}
 
-	.form-floating
-		%input#pageURL.form-control.border.border-dark{type: "text", readonly: "true", value: "#{challenge_participant_url(@challenge, @participant)}"}
-		%label{for: "pageURL"} Page URL
-
 	.row.mt-4
 		#leftSide.col-lg-8.order-2.order-lg-1
 			.row.mb-4.mt-4
@@ -35,7 +31,10 @@
 										.text-muted.fw-folder You haven't earned any badges yet!		
 		
 		
-		#rightSide.col-lg-4.order-1{aria:{flowto: "leftSide"}}
+		#rightSide.col-lg-4.order-1.p-2{aria:{flowto: "leftSide"}}
+			.form-floating.mb-4
+				%input#pageURL.form-control.border.border-dark{type: "text", readonly: "true", value: "#{challenge_participant_url(@challenge, @participant)}"}
+				%label{for: "pageURL"} Page URL
 			.progress.border.border-dark
 				.progress-bar{role: "progressbar", style: "width: #{@percent}%", aria:{label: "#{@percent.ceil}% Amount Raised", valuenow: "#{@percent}", valuemin: "0", valuemax: "100"}}
 			.mt-2.text-center.text-muted.fw-bolder 
