--- a/app/views/donation_mailer/tax_deductible.html.haml
+++ b/app/views/donation_mailer/tax_deductible.html.haml
@@ -29,4 +29,4 @@
 %p
 	Patrick Vellia<br>
 	DBSAN Treasurer<br>
-	%a{href: "mailto:patrick.vellia@gmail.com"} patrick.vellia@gmail.com
+	%a{href: "mailto:patrick.vellia@dbsan.com"} patrick.vellia@gmail.com
