--- a/app/views/challenge_participants/show.html.haml
+++ b/app/views/challenge_participants/show.html.haml
@@ -50,14 +50,19 @@
 				Raised
 			.row.p-4
 				= link_to "Donate", new_donation_path(participant_id: @participant.id), class: "btn btn-lg btn-dark", role: "button"
-			%h2 My Donors
-			- @donations.each do |d|
-				.d-flex.border.border-dark
-					.flex-grow-1.p-2
-						- if @participant.user_id == current_user&.id
-							= d.name
-						- else
-							- name = d.name.split(" ")
-							= name[0] + " " + name[1].split("")[0] + "."
-					.flex.p-2
-						= number_to_currency(d.amount.to_i / 100.0, precision: 0)
+			- if @donations.count > 0
+				%h2 My Donors
+				- @donations.uniq{ |x| x.email }.each do |d|
+					.d-flex.border.border-dark
+						.flex-grow-1.p-2
+							- if @participant.user_id == current_user&.id
+								= d.name
+							- else
+								- name = d.name.split(" ")
+								= name[0] + " " + name[1].split("")[0] + "."
+						.flex.p-2
+							- @donations = @donations.where(email: d.email)
+							- total_amount = []
+							- @donations.each do |de|
+								- total_amount.append(de.amount_deci)
+							= number_to_currency(total_amount.sum, precision: 0)
