--- a/app/views/challenge_participants/show.html.haml
+++ b/app/views/challenge_participants/show.html.haml
@@ -52,7 +52,7 @@
 				= link_to "Donate", new_donation_path(participant_id: @participant.id), class: "btn btn-lg btn-dark", role: "button"
 			- if @donations.count > 0
 				%h2 My Donors
-				- @donations.each do |d|
+				- @unique_emails.each do |e|
 					.d-flex.border.border-dark
 						.flex-grow-1.p-2
 							- if @participant.user_id == current_user&.id
@@ -61,4 +61,9 @@
 								- name = d.name.split(" ")
 								= name[0] + " " + name[1].split("")[0] + "."
 						.flex.p-2
-							= number_to_currency(d.amount_deci, precision: 0)
+							- unique_donations = @donations.where(email: d.email).all
+							- total_amount = []
+							- unique_donations.each do |d|
+								total_amount.append(d.amount_deci)
+							- total_amount = total_amount.sum
+							= number_to_currency(total_amount, precision: 0)
