--- a/app/views/challenge_participants/show.html.haml
+++ b/app/views/challenge_participants/show.html.haml
@@ -56,9 +56,9 @@
 					.d-flex.border.border-dark
 						.flex-grow-1.p-2
 							- if @participant.user_id == current_user&.id
-								= d.name
+								= e.name
 							- else
-								- name = d.name.split(" ")
+								- name = e.name.split(" ")
 								= name[0] + " " + name[1].split("")[0] + "."
 						.flex.p-2
 							- unique_donations = @donations.where(email: e.email).all
