--- a/app/views/challenges/_form.html.haml
+++ b/app/views/challenges/_form.html.haml
@@ -3,6 +3,10 @@
 
 	= form_with(model: challenge) do |f|
 		.row.form-floating
+			= f.file_field :cover_image
+			= f.label :cover_image, "Cover Image"
+
+		.row.form-floating
 			= f.text_field :title, placeholder: "Title", class: "form-control border border-dark"
 			= f.label :title, "Title"
 		.row
