testing different layout of label and hidden

--- a/app/views/challenge_participants/show.html.haml
+++ b/app/views/challenge_participants/show.html.haml
@@ -57,8 +57,8 @@
 						.card-body.position-relative.w-100{style: "padding-top: 100%"}
 							.position-absolute.top-0.start-0.bottom-0.end-0.p-4.border-dark{style: "border: 0.5rem solid; border-radius: 50%"} 
 								.row.h-100
-									.align-self-center.text-center{aria: {label: "0 Minutes"}}
-										.display-4.fw-bolder{aria: {hidden: "true"}} 0
+									.align-self-center.text-center
+										.display-4.fw-bolder{aria: {label: "0 Minutes"}} 0
 										.display-6.fw-bolder{aria: {hidden: "true"}} Minutes		
 				.col-12.col-md-7.mx-auto
 					.card
