--- a/app/views/challenge_participants/show.html.haml
+++ b/app/views/challenge_participants/show.html.haml
@@ -57,9 +57,10 @@
 						.card-body.position-relative.w-100{style: "padding-top: 100%"}
 							.position-absolute.top-0.start-0.bottom-0.end-0.p-4.border-dark{style: "border: 0.5rem solid; border-radius: 50%"} 
 								.row.h-100
-									.align-self-center.text-center{aria: {labelledby: "totalTime totalTimeUnit"}}
-										#totalTime.display-4.fw-bolder 0
-										#totalTimeUnit.display-6.fw-bolder Minutes		
+									.align-self-center.text-center
+										.visually-hidden 0 Minutes
+										%span.display-4.fw-bolder{aria: {hidden: "true"}} 0
+										%span.display-6.fw-bolder{aria: {hidden: "true"}} Minutes		
 				.col-12.col-md-7.mx-auto
 					.card
 						.card-body.position-relative.w-100{style: "padding-top: 70%"}
