fixed the total time

--- a/app/views/challenge_participants/show.html.haml
+++ b/app/views/challenge_participants/show.html.haml
@@ -59,8 +59,8 @@
 								.row.h-100
 									.align-self-center.text-center
 										.visually-hidden 0 Minutes
-										%span.display-4.fw-bolder{aria: {hidden: "true"}} 0
-										%span.display-6.fw-bolder{aria: {hidden: "true"}} Minutes		
+										.display-4.fw-bolder{aria: {hidden: "true"}} 0
+										.display-6.fw-bolder{aria: {hidden: "true"}} Minutes		
 				.col-12.col-md-7.mx-auto
 					.card
 						.card-body.position-relative.w-100{style: "padding-top: 70%"}
