--- a/app/views/challenge_participants/show.html.haml
+++ b/app/views/challenge_participants/show.html.haml
@@ -56,6 +56,7 @@
 					.card
 						.card-body.position-relative.w-100{style: "padding-top: 100%"}
 							.position-absolute.top-0.start-0.bottom-0.end-0.p-4.border-dark{style: "border: 0.5rem solid; border-radius: 50%"} 
+								.h-100.visually-hidden 0 Minutes
 								.row.h-100
 									.align-self-center.text-center
 										.visually-hidden 0 Minutes
