try with role text

--- a/app/views/challenge_participants/show.html.haml
+++ b/app/views/challenge_participants/show.html.haml
@@ -56,12 +56,11 @@
 					.card
 						.card-body.position-relative.w-100{style: "padding-top: 100%"}
 							.position-absolute.top-0.start-0.bottom-0.end-0.p-4.border-dark{style: "border: 0.5rem solid; border-radius: 50%"} 
-								.h-100.visually-hidden 0 Minutes
+								
 								.row.h-100
-									.align-self-center.text-center
-										.visually-hidden 0 Minutes
-										.display-4.fw-bolder{aria: {hidden: "true"}} 0
-										.display-6.fw-bolder{aria: {hidden: "true"}} Minutes		
+									.align-self-center.text-center{role: "text"}
+										.display-4.fw-bolder 0
+										.display-6.fw-bolder Minutes		
 				.col-12.col-md-7.mx-auto
 					.card
 						.card-body.position-relative.w-100{style: "padding-top: 70%"}
